Version 2.73    ( Mon May 14 10:46:38 IDT 2012 )
------------------------------------------------

* Regression bug fix: temporary file creation error should generate a warning
and return undef() instead of throwing an exception.
    - https://rt.cpan.org/Ticket/Display.html?id=77039
    - Thanks to Adam D. Barrat for noticing that, and Gregor Herrmann
    from Debian for reporting this issue.

Version 2.72    ( Sat May  5 19:19:09 IDT 2012 )
------------------------------------------------

* More refactoring.

* Now requiring Fcntl (which is a core module) for SEEK_SET() and SEEK_CUR().

* Update the contact information on the POD.

* Maintainer’s special birthday (5-May) release.

Version 2.71:   ( Wed May  2 10:59:04 IDT 2012 )
------------------------------------------------

* SECURITY BUG FIX: Config::IniFiles used to write to a temporary filename
with a predictable name ("${filename}-new") which opens the door for potential
exploits.

* Now requiring List::MoreUtils (for any() and other functions), File::Temp
and File::Basename .

* Add "use warnings;" to lib/Config/IniFiles.pm .

* More refactoring.

Version 2.70:   ( Fri Apr  6 12:47:25 IDT 2012 )
------------------------------------------------

* Fix the test dependency (in the new t/31comments_with_spaces.t test)
on IO::stringy (now writing it to a file).
    - This caused some CPAN Testers failures such as:
        - http://www.cpantesters.org/cpan/report/c16b9978-7f40-11e1-9d6f-f6dbfa7543f5

* Modernized some of the open() calls in the test files.
    - three args open, lexcial file handles, etc.

Version 2.69:   ( Thu Apr  5 12:05:46 IDT 2012 )
------------------------------------------------

* Fix https://sourceforge.net/tracker/?func=detail&aid=3388382&group_id=6926&atid=106926
    - "Trailing comments with whitespace are not recognised"
    - Thanks to briconaut for the report and to rbowen for the patch and test.

* Add the method ->OutputConfigToFileHandle which is a more explicit and