@@ -1,3 +1,8 @@
+* Made sure .ini files are output on Win32 with CR-LF pairs.
+    - Thanks to Ben Johnson for reporting the bug and for a preliminary
+    test script.
+    - Add t/32mswin-outputs-contain-crs.t
+
 Version 2.73    ( Mon May 14 10:46:38 IDT 2012 )
 ------------------------------------------------
 
